# egin

./: CMakeLists.txt  egin.cmake
src/: CMakeLists.txt
src/ai/: AIAgent.cpp  AIState.cpp
src/animation/: AnimationClip.cpp  AnimationClip.h
src/core/: Base.h  Engine.cpp  Engine.hpp  Game.cpp  Game.h  Game.inl  Input.cpp  Input.hpp  Logger.cpp  Logger.hpp  Platform.cpp  PlatformSDL2.cpp  SceneManager.cpp  SceneManager.hpp  Window.cpp  Window.hpp  gplay3d-main-windows.cpp
src/graphics/: Node.cpp  Node.h  Scene.cpp  Scene.h  SceneLoader.cpp  Text.cpp
src/input/: Input.cpp  Input.hpp
src/interfaces/: Drawable.cpp  Drawable.hpp  IScene.cpp  IScene.hpp  Node.cpp  Node.hpp
src/math/: Transform.cpp  Transform.h  Transform.hpp
src/physics/: PhysicsCollisionObject.cpp  PhysicsCollisionObject.h  PhysicsController.cpp  PhysicsController.h
src/renderer/: Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp
src/sparkparticles/: SparkParticleEmitter.h  SparkQuadRenderer.cpp
src/ui/: Control.cpp  Control.h
